# Toolbox

./: .gitignore  CMakeLists.txt
2D_Maths/: CMakeLists.txt
2D_Maths/include/: maths.hpp  range.hpp  referential2D.hpp  shape.hpp  utils.hpp  vector2.hpp
2D_Maths/inline/: range.inl  referential2D.inl  shape.inl  utils.inl  vector2.inl
3D_Collisions/: CMakeLists.txt
3D_Maths/: 3D_unit_test.cpp  CMakeLists.txt
3D_Maths/include/: maths.hpp  matrix4.hpp  quaternion.hpp  referential3D.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
3D_Maths/inline/: matrix4.inl  quaternion.inl  referential3D.inl  utils.inl  vector2.inl  vector3.inl  vector4.inl
